force-app/main/default/objects/Activity_Plan__c/Activity_Plan__c.object-meta.xml
<CustomObject>
    <label>Activity Plan</label>
    <nameField>
        <displayFormat>AP-{000}</displayFormat>
        <label>Activity Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>