force-app/main/default/objects/Activity_Plan__c/fields/AP_Source__c.field-meta.xml
<CustomField>
    <fullName>AP_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AP Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Picklist_Value__c.Type__c</field>
            <operation>equals</operation>
            <value>ACTIVTY_PLAN_SOURCE</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Picklist_Value__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Picklist_Value__c</referenceTo>
    <relationshipLabel>Activities Plan (AP Source)</relationshipLabel>
    <relationshipName>Activities_Plan1</relationshipName>
    <type>Lookup</type>
</CustomField>