force-app/main/default/objects/Activity_Plan__c/fields/Closed_Age__c.field-meta.xml
<CustomField>
    <fullName>Closed_Age__c</fullName>
    <formula>Closed_On__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>