force-app/main/default/objects/Activity_Plan__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>