force-app/main/default/objects/Activity_Plan__c/fields/Contact_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Id__c</fullName>
    <formula>ContactName__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account Id</label>
    <type>Text</type>
</CustomField>