force-app/main/default/objects/Activity_Plan__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities Plan</relationshipLabel>
    <relationshipName>Activities_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>