force-app/main/default/objects/Activity_Plan__c/fields/Lock_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Lock_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Assignment</label>
    <type>Checkbox</type>
</CustomField>