force-app/main/default/objects/Activity_Plan__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Patient ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>