force-app/main/default/objects/Activity_Plan__c/fields/Plan_Complete__c.field-meta.xml
<CustomField>
    <fullName>Plan_Complete__c</fullName>
    <label>Plan Complete</label>
    <type>DateTime</type>
</CustomField>