force-app/main/default/objects/Activity_Plan__c/fields/Project_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Number__c</fullName>
    <label>Project Plan Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>