force-app/main/default/objects/Activity_Plan__c/fields/QC_Status__c.field-meta.xml
<CustomField>
    <fullName>QC_Status__c</fullName>
    <label>QC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>QCed</fullName>
            </value>
            <value>
                <fullName>QC Failed</fullName>
            </value>
            <value>
                <fullName>Double QCed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>