force-app/main/default/objects/Activity_Plan__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Activities Plan</relationshipLabel>
    <relationshipName>Activities_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>