force-app/main/default/objects/Activity_Plan__c/fields/SiteNumber__c.field-meta.xml
<CustomField>
    <fullName>SiteNumber__c</fullName>
    <formula>Site__r.Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site #</label>
    <type>Text</type>
</CustomField>