force-app/main/default/objects/Activity_Plan__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountTypes__c.Type__c</field>
            <operation>equals</operation>
            <value>Sponsor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountTypes__c</referenceTo>
    <relationshipLabel>Activities Plan</relationshipLabel>
    <relationshipName>Activities_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>