force-app/main/default/objects/Activity_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Active by Site</fullName>
            </value>
            <value>
                <fullName>Pending QC</fullName>
            </value>
            <value>
                <fullName>Pending Reply</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not Yet Ordered</fullName>
            </value>
            <value>
                <fullName>Sent RFP to Provider</fullName>
            </value>
            <value>
                <fullName>Waiting Payment Fin</fullName>
            </value>
            <value>
                <fullName>Deescalated</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Site Cancelled</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Customs Issue</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Rejected Assistance</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Patient Unresponsive</fullName>
            </value>
            <value>
                <fullName>Escalated to Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>