force-app/main/default/objects/Activity_Plan__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study</label>
    <referenceTo>Study__c</referenceTo>
    <relationshipLabel>Activities Plan</relationshipLabel>
    <relationshipName>Activities_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>