force-app/main/default/objects/Activity_Plan__c/fields/Study_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Study_Nickname__c</fullName>
    <formula>Study__r.Study_Nickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Nickname</label>
    <type>Text</type>
</CustomField>