force-app/main/default/objects/Activity_Plan__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <label>Survey Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>