force-app/main/default/objects/Activity_Plan__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR / Termination Return</fullName>
            </value>
            <value>
                <fullName>RAVE External Account Creation</fullName>
            </value>
            <value>
                <fullName>RAVE Internal Account Creation</fullName>
            </value>
            <value>
                <fullName>DU File Pre-Verification</fullName>
            </value>
            <value>
                <fullName>DU File Verification</fullName>
            </value>
            <value>
                <fullName>Vendor Extract Verification</fullName>
            </value>
            <value>
                <fullName>Site CSR CD</fullName>
            </value>
            <value>
                <fullName>Site Closeout</fullName>
            </value>
            <value>
                <fullName>Site Laptop Cleaning</fullName>
            </value>
            <value>
                <fullName>Laptop Provisioning</fullName>
            </value>
            <value>
                <fullName>Site Closeout - I*Net</fullName>
            </value>
            <value>
                <fullName>Site Closeout - I*Net (EDC Form)</fullName>
            </value>
            <value>
                <fullName>Cleaning Report</fullName>
            </value>
            <value>
                <fullName>I*NET Laptop Verification</fullName>
            </value>
            <value>
                <fullName>I*NET Site Laptop Cleaning</fullName>
            </value>
            <value>
                <fullName>Site Closeout - Transferred patient</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>User Deactivation</fullName>
            </value>
            <value>
                <fullName>User Update</fullName>
            </value>
            <value>
                <fullName>Study Closeout</fullName>
            </value>
            <value>
                <fullName>Connectivity Provisioning</fullName>
            </value>
            <value>
                <fullName>Connectivity Cancellation</fullName>
            </value>
            <value>
                <fullName>Laptop Return</fullName>
            </value>
            <value>
                <fullName>Site Assessment</fullName>
            </value>
            <value>
                <fullName>iRelease General</fullName>
            </value>
            <value>
                <fullName>iRelease GMP-DOCS</fullName>
            </value>
            <value>
                <fullName>iRelease GxP Drive</fullName>
            </value>
            <value>
                <fullName>iRelease Core</fullName>
            </value>
            <value>
                <fullName>iRelease IDS</fullName>
            </value>
            <value>
                <fullName>iRelease Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>