force-app/main/default/objects/Activity_Plan__c/recordTypes/HC_Pharma.recordType-meta.xml
<RecordType>
    <fullName>HC_Pharma</fullName>
    <active>true</active>
    <label>HC Pharma</label>
</RecordType>