force-app/main/default/objects/Activity_Plan__c/validationRules/C3i_AP_Planned_Complete_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>C3i_AP_Planned_Complete_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
    ISPICKVAL(Status__c , &quot;Closed&quot;) || 
    ISPICKVAL(Status__c, &quot;Site Cancelled&quot;) || 
    ISPICKVAL(Status__c, &quot;Cancelled&quot;)
    ),
    Account_Name__c = &quot;Novartis&quot;,
    ISBLANK(Plan_Complete__c)
)</errorConditionFormula>
    <errorDisplayField>Plan_Complete__c</errorDisplayField>
    <errorMessage>The AP Plan Complete field cannot be left blank</errorMessage>
</ValidationRule>