force-app/main/default/objects/Activity_Plan__c/validationRules/HC_Clinical_Study.validationRule-meta.xml
<ValidationRule>
    <fullName>HC_Clinical_Study</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Study__c),ISNULL(Study__c))</errorConditionFormula>
    <errorDisplayField>Study__c</errorDisplayField>
    <errorMessage>Study is a required field</errorMessage>
</ValidationRule>